--- a/healthcare-manager/src/main/resources/application-test.yml
+++ b/healthcare-manager/src/main/resources/application-test.yml
@@ -53,7 +53,7 @@ spring:
 
 # 绑定mybatis
 mybatis:
-  mapper-locations: classpath:mysql/*.xml
+  mapper-locations: classpath:mapper/*.xml
   type-aliases-package: xyz.greatinvincible.entity
   # 控制台打印 sql 语句
   configuration:
