--- a/healthcare-frontend/package.json
+++ b/healthcare-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ant-design-vue": "^1.7.8",
     "axios": "^0.25.0",
+    "echarts": "^5.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
