--- a/healthcare-frontend/package.json
+++ b/healthcare-frontend/package.json
@@ -31,6 +31,12 @@
     "copy-webpack-plugin": "^4.0.1",
     "crypto-js": "^4.1.1",
     "css-loader": "^0.28.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-vue": "^8.5.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
